templates/iptables
<FULL>
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport ssh -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport http -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport https -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport smtp -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport submission -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport imap -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport imaps -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags SYN,RST,ACK SYN -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -j LOG --log-level info --log-prefix iptables: 
-A INPUT -p tcp -j DROP
-A INPUT -p udp -j LOG --log-level info --log-prefix iptables: 
-A INPUT -p udp -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p icmp -m icmp --icmp-type 14 -j DROP
COMMIT
</FULL>

<WEB>
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport ssh -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport http -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport https -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags SYN,RST,ACK SYN -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -j LOG --log-level info --log-prefix iptables: 
-A INPUT -p tcp -j DROP
-A INPUT -p udp -j LOG --log-level info --log-prefix iptables: 
-A INPUT -p udp -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p icmp -m icmp --icmp-type 14 -j DROP
COMMIT
</WEB>

<MAIL>
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport ssh -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport smtp -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport submission -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport imap -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport imaps -j ACCEPT
-A INPUT -p tcp -m tcp ! --tcp-flags SYN,RST,ACK SYN -j ACCEPT
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -j LOG --log-level info --log-prefix iptables: 
-A INPUT -p tcp -j DROP
-A INPUT -p udp -j LOG --log-level info --log-prefix iptables: 
-A INPUT -p udp -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p icmp -m icmp --icmp-type 14 -j DROP
COMMIT
</MAIL>
